--- a/fooocus_colab.ipynb
+++ b/fooocus_colab.ipynb
@@ -1,9 +1,40 @@
-!pip install pygit2==1.15.1
-%cd /content
-!git clone https://github.com/lllyasviel/Fooocus.git
+{
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "VjYy0F2gZIPR"
+   },
+   "outputs": [],
+   "source": [
+    "!pip install pygit2==1.15.1\n",
+    "%cd /content\n",
+    "!git clone https://github.com/lllyasviel/Fooocus.git\n",
+    
+    "%cd /content/Fooocus/models/loras\n",
+    "!wget http://freepc2.no-ip.org/Pussy_Lily_v5_XL.safetensors\n",
+    
+    "%cd /content/Fooocus\n",
+    "!python entry_with_update.py --share --always-high-vram\n",
+   ]
+  }
+ ],
+ "metadata": {
+  "accelerator": "GPU",
+  "colab": {
+   "gpuType": "T4",
+   "provenance": []
+  },
+  "kernelspec": {
+   "display_name": "Python 3",
+   "name": "python3"
+  },
+  "language_info": {
+   "name": "python"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 0
+}
 
-%cd /content/Fooocus/models/loras
-!wget http://freepc2.no-ip.org/Pussy_Lily_v5_XL.safetensors
-
-%cd /content/Fooocus
-!python entry_with_update.py --share --always-high-vram
