--- a/fooocus_colab.ipynb
+++ b/fooocus_colab.ipynb
@@ -16,7 +16,7 @@
     "!wget http://freepc2.no-ip.org/Pussy_Lily_v5_XL.safetensors\n",
     
     "%cd /content/Fooocus\n",
-    "!python entry_with_update.py --share --always-high-vram\n",
+    "!python entry_with_update.py --share --always-high-vram\n"
    ]
   }
  ],
