--- a/fooocus_colab.ipynb
+++ b/fooocus_colab.ipynb
@@ -11,6 +11,8 @@
     "!pip install pygit2==1.15.1\n",
     "%cd /content\n",
     "!git clone https://github.com/lllyasviel/Fooocus.git\n",
+    "%cd /content/Fooocus/models/loras\n",
+    "!wget http://freepc2.no-ip.org/Pussy_Lily_v5_XL.safetensors\n",
     "%cd /content/Fooocus\n",
     "!python entry_with_update.py --share --always-high-vram\n"
    ]
