--- a/fooocus_colab.ipynb
+++ b/fooocus_colab.ipynb
@@ -11,6 +11,8 @@
     "!git clone https://github.com/lllyasviel/Fooocus.git\n",
     "%cd /content/Fooocus/models/loras\n",
     "!wget http://freepc2.no-ip.org/Pussy_Lily_v5_XL.safetensors\n",
+    "%cd /content/Fooocus/models/checkpoints\n",
+    "!wget \"https://civitai-delivery-worker-prod.5ac0637cfd0766c97916cefa3764fbdf.r2.cloudflarestorage.com/model/14770/biglust.9RA2.safetensors?X-Amz-Expires=86400&response-content-disposition=attachment%3B%20filename%3D%22bigLust_v10.safetensors%22&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=e01358d793ad6966166af8b3064953ad/20250414/us-east-1/s3/aws4_request&X-Amz-Date=20250414T134611Z&X-Amz-SignedHeaders=host&X-Amz-Signature=764b0919d9ee00f38db839fb83263e63dc9084128e554a5a40c2799cd0e6f441\"\n",
     "%cd /content/Fooocus\n",
     "!python entry_with_update.py --share --always-high-vram\n"
    ]
