--- a/fooocus_colab.ipynb
+++ b/fooocus_colab.ipynb
@@ -37,6 +37,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%cd /content/Fooocus/models/loras\n",
+    "!wget -O leaked_nudes_style_v1_fixed.safetensors \"https://civitai-delivery-worker-prod.5ac0637cfd0766c97916cefa3764fbdf.r2.cloudflarestorage.com/model/4138/leakedNudesStyleV1.qaCU.safetensors?X-Amz-Expires=86400&response-content-disposition=attachment%3B%20filename%3D%22leaked_nudes_style_v1_fixed.safetensors%22&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=e01358d793ad6966166af8b3064953ad/20250414/us-east-1/s3/aws4_request&X-Amz-Date=20250414T141308Z&X-Amz-SignedHeaders=host&X-Amz-Signature=cef435be7cc754210df9a6ca095866ee16b9de6ab53608e1ae4b6cdf26e3d3ff\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%cd /content/Fooocus/models/checkpoints\n",
     "!wget -O biglust.9RA2.safetensors \"https://civitai-delivery-worker-prod.5ac0637cfd0766c97916cefa3764fbdf.r2.cloudflarestorage.com/model/14770/biglust.9RA2.safetensors?X-Amz-Expires=86400&response-content-disposition=attachment%3B%20filename%3D%22bigLust_v10.safetensors%22&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=e01358d793ad6966166af8b3064953ad/20250414/us-east-1/s3/aws4_request&X-Amz-Date=20250414T134611Z&X-Amz-SignedHeaders=host&X-Amz-Signature=764b0919d9ee00f38db839fb83263e63dc9084128e554a5a40c2799cd0e6f441\"\n"
    ]
