--- a/fooocus_colab.ipynb
+++ b/fooocus_colab.ipynb
@@ -47,6 +47,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%cd /content/Fooocus/models/loras\n",
+    "!wget -O xpenis-uncut-3.2-000135.safetensors \"https://civitai-delivery-worker-prod.5ac0637cfd0766c97916cefa3764fbdf.r2.cloudflarestorage.com/model/2334153/xpenisUncut32000135.sQio.safetensors?X-Amz-Expires=86400&response-content-disposition=attachment%3B%20filename%3D%22xpenis-uncut-3.2-000135.safetensors%22&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=e01358d793ad6966166af8b3064953ad/20250414/us-east-1/s3/aws4_request&X-Amz-Date=20250414T142127Z&X-Amz-SignedHeaders=host&X-Amz-Signature=031a1d5d1342c205225f5738645846e2c5039121e69614562621eb59b5dd82da\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%cd /content/Fooocus/models/checkpoints\n",
     "!wget -O biglust.9RA2.safetensors \"https://civitai-delivery-worker-prod.5ac0637cfd0766c97916cefa3764fbdf.r2.cloudflarestorage.com/model/14770/biglust.9RA2.safetensors?X-Amz-Expires=86400&response-content-disposition=attachment%3B%20filename%3D%22bigLust_v10.safetensors%22&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=e01358d793ad6966166af8b3064953ad/20250414/us-east-1/s3/aws4_request&X-Amz-Date=20250414T134611Z&X-Amz-SignedHeaders=host&X-Amz-Signature=764b0919d9ee00f38db839fb83263e63dc9084128e554a5a40c2799cd0e6f441\"\n"
    ]
