--- a/fooocus_colab.ipynb
+++ b/fooocus_colab.ipynb
@@ -57,6 +57,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%cd /content/Fooocus/models/loras\n",
+    "!wget -O HandFineTuning_XL.safetensors https://huggingface.co/Olmis/normaluser/resolve/main/file0005.safetensors\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%cd /content/Fooocus\n",
     "!python entry_with_update.py --share --always-high-vram\n"
    ]
